--- a/template/defaults/settings.default.json
+++ b/template/defaults/settings.default.json
@@ -1,5 +1,11 @@
 {
   "profile": "dotnet",
   "mcp_enabled": true,
-  "standards_as_warp_rules": true
+  "standards_as_warp_rules": true,
+  "analysis": {
+    "auto_approve_splits": false,
+    "split_threshold_effort": "XL",
+    "question_timeout_hours": null,
+    "mode": "batch"
+  }
 }
