--- a/template/systems/mcp/tools/task-get-next/metadata.yaml
+++ b/template/systems/mcp/tools/task-get-next/metadata.yaml
@@ -1,5 +1,5 @@
 name: task_get_next
-description: Get the highest priority todo task that has no unmet dependencies
+description: Get the highest priority task ready for implementation. Prefers analysed tasks (pre-flight analysis complete) over todo tasks.
 inputSchema:
   type: object
   properties:
@@ -7,3 +7,7 @@ inputSchema:
       type: boolean
       description: "Return full task details. WARNING: Consumes significant context window. Only use when you need description, steps, or acceptance_criteria. Default returns summary fields only (id, name, status, priority, effort, category)."
       default: false
+    prefer_analysed:
+      type: boolean
+      description: "If true (default), return analysed tasks before todo tasks. Set to false to get todo tasks only (for analysis phase)."
+      default: true
