--- a/.github/workflows/test-new-user.yml
+++ b/.github/workflows/test-new-user.yml
@@ -52,6 +52,11 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Install dotbot globally
+        shell: pwsh
+        run: |
+          pwsh -NoProfile -ExecutionPolicy Bypass -File install.ps1
+
       - name: Run Layers 1-3
         shell: pwsh
         run: |
